kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  selector:
    matchLabels:
      run: web
  template:
    metadata:
      labels:
        run: web
    spec:
      containers:
      - args:
        - bash
        - -c
        - python3.8 manage.py collectstatic --no-input && gunicorn ecommerce.wsgi:application
          --bind 0.0.0.0:3005
        image: web
        imagePullPolicy: Never
        name: web
        ports:
        - containerPort: 30050
          protocol: TCP
