kubernetes/ecommerce-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: ecommerce-svc
 namespace: default
spec: 
 selector:
   role: frontend
 ports:  
   - protocol: TCP
     port: 3005 
     targetPort: 3005 
     nodePort: 31000
 type: NodePort
