kubernetes/retailapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: retailapp
  name: retailapp
spec:
  ports:
    - name: 3005-3005
      port: 3005
      protocol: TCP
      targetPort: 3005
  selector:
    app: retailapp
  type: ClusterIP
status:
  loadBalancer: {}
