kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
spec:
  ports:
  - port: 3005
    protocol: TCP
    targetPort: 3005
  selector:
    run: web
  type: NodePort
