kubernetes/ecommerce-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ecommerce-ingress
spec:
 rules:
  - http:
      paths:
      - path: /
        backend:
         serviceName: ecommerce-svc
         servicePort: 3005
